# planercnn

./: README.md  config.py  evaluate.py  evaluate_utils.py  options.py  plane_utils.py  requirements.txt  train_planercnn.py  utils.py  visualize_utils.py
anchors/: anchor_planes_N.npy
data_prep/: README.md  parse.py
data_prep/Renderer/: .tramp_history  CMakeLists.txt  main.c  main.cpp  renderer.c  segmentation.frag  segmentation.vert
datasets/: inference_dataset.py  nyu_dataset.py  plane_dataset.py  plane_stereo_dataset.py  scannet_scene.py  scene_ids_val.npy
example_images/: camera.txt
models/: model.py  modules.py  refinement_net.py
